--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,15 @@ html,
 body {
     font-family: "Be Vietnam Pro";
     font-size: 16px;
+    width: 100%;
+    height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
 }
-
+#app {
+    width: 100%;
+    height: 100%;
+}
 @layer components {
     .h1 {
         font-weight: 700;
