--- a/src/style.css
+++ b/src/style.css
@@ -25,40 +25,38 @@ body {
     height: 100%;
 }
 
-@layer components {
-    .h1 {
-        font-weight: 700;
-        font-size: 2rem;
-    }
 
-    .h2 {
-        font-size: 1rem;
-        font-weight: 500;
-    }
-
-    .h2_bold {
-        font-size: 1rem;
-        font-weight: bold;
-    }
-
-    .h3 {
-        font-weight: 500;
-        font-size: .875rem;
-    }
-
-    .h3_bold {
-        font-weight: bold;
-        font-size: .875rem;
-    }
-
-    .h4 {
-        font-size: .75rem;
-        font-weight: 500;
-    }
-
-    .h4_bold {
-        font-size: .75rem;
-        font-weight: bold;
-    }
+@utility h1 {
+    font-weight: 700;
+    font-size: 2rem;
 }
 
+@utility h2 {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+@utility h2_bold {
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+@utility h3 {
+    font-weight: 500;
+    font-size: .875rem;
+}
+
+@utility h3_bold {
+    font-weight: bold;
+    font-size: .875rem;
+}
+
+@utility h4 {
+    font-size: .75rem;
+    font-weight: 500;
+}
+
+@utility h4_bold {
+    font-size: .75rem;
+    font-weight: bold;
+}
